Bug 45999 - FILESAVE: DOC - Hebrew and arabic text in comments appear in MS Word in reverse order and wrong font
Summary: FILESAVE: DOC - Hebrew and arabic text in comments appear in MS Word in rever...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5 all versions
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:6.1.0
Keywords:
Depends on:
Blocks: RTL-CTL DOC-Comments
  Show dependency treegraph
 
Reported: 2012-02-13 07:55 UTC by Nadav
Modified: 2018-09-30 14:57 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
example export doc file (9.00 KB, application/msword)
2012-02-13 07:55 UTC, Nadav
Details
Example export docx which notes display correctly (4.00 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2012-02-13 07:57 UTC, Nadav
Details
testdoc (9.71 KB, application/vnd.oasis.opendocument.text)
2012-11-10 14:05 UTC, Lior Kaplan
Details
testdoc doc export (9.00 KB, application/msword)
2012-11-10 14:06 UTC, Lior Kaplan
Details
testdoc docx export (4.54 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2012-11-10 14:07 UTC, Lior Kaplan
Details
69859 (40.93 KB, image/png)
2012-11-26 08:01 UTC, Nadav
Details
69860 (35.74 KB, image/png)
2012-11-26 08:02 UTC, Nadav
Details
69861 (37.27 KB, image/png)
2012-11-26 08:02 UTC, Nadav
Details
test of lo 4.0.1.2 (12.31 KB, application/x-zip-compressed)
2013-03-20 15:23 UTC, Nadav
Details
sample odt with hebrew and arabic (9.39 KB, application/vnd.oasis.opendocument.text)
2017-10-02 12:26 UTC, Yousuf Philips (jay) (retired)
Details
screenshot of how it appears in Word 2013 (17.46 KB, image/png)
2017-10-02 12:31 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nadav 2012-02-13 07:55:27 UTC
Created attachment 56972 [details]
example export doc file

Problem description: 

Steps to reproduce:
1. .... create new document in LO5 with hebrew notes
2. .... save it to doc
3. .... open with MS WORD

Current behavior:
Notes letters display as squares in MS Word (not happen when saving docx)

Expected behavior:
Notes will be readable

Platform (if different from the browser): 
Create doc on linux
open in MS WORD on wine on linux
              
Browser: Mozilla/5.0 (X11; Ubuntu; Linux i686; rv:10.0.1) Gecko/20100101 Firefox/10.0.1
Comment 1 Nadav 2012-02-13 07:57:25 UTC
Created attachment 56973 [details]
Example export docx which notes display correctly
Comment 2 Urmas 2012-02-13 11:48:16 UTC
I can see the following note: ניסיון אחד עכשיו
Is it correct?
Comment 3 Nadav 2012-02-13 12:21:14 UTC
yes the note is:
ניסיון אחד עכשיו
it possible to see if opening in LO but not in MS Word
Comment 4 Urmas 2012-02-13 12:42:59 UTC
And whe you create a note in MS Word (which one btw.), does it display correctly?
Comment 5 Lior Kaplan 2012-11-10 14:05:41 UTC
Created attachment 69859 [details]
testdoc
Comment 6 Lior Kaplan 2012-11-10 14:06:14 UTC
Created attachment 69860 [details]
testdoc doc export
Comment 7 Lior Kaplan 2012-11-10 14:07:43 UTC
Created attachment 69861 [details]
testdoc docx export

I've attached a testdoc and two exports (doc, docx). Please verify how they look in MS Word (and note which version). The documents were created in LibO 3.6.3.
Comment 8 Nadav 2012-11-25 09:09:55 UTC
attachment 69859 [details]:
הערה בעברית
attachment 69860 [details]:
תירבעב הרעה
attachment 69861 [details]:
בעברית הערה

OFFICE 2013
Comment 9 Nadav 2012-11-26 08:01:59 UTC
Created attachment 70570 [details]
69859
Comment 10 Nadav 2012-11-26 08:02:29 UTC
Created attachment 70572 [details]
69860
Comment 11 Nadav 2012-11-26 08:02:58 UTC
Created attachment 70573 [details]
69861
Comment 12 Lior Kaplan 2012-11-26 08:05:29 UTC
@nadav - so now it appears in Hebrew but the order of the words is wrong?
Comment 13 Nadav 2012-11-26 08:39:02 UTC
@Lior Kaplan

As you can see there are two problems:

1. wrong order of words
2. wrong order of letters - which is not new, my friend complain to me about it and since I don't have office, I complain about the squares bug in LO
Comment 14 Boaz Dodin 2013-03-19 11:39:26 UTC
(In reply to comment #5)
> Created attachment 69859 [details]
> testdoc

Tested on:
Windows XP SP3;
LibreOffice 4.0.1.2;
Office Word 2003 SP3 with compatibility pack.

testdoc doc export result:
הערה בעברית

testdoc docx export result:
הערה בעברית

No problem here.

Resolved?
Comment 15 Nadav 2013-03-20 15:22:19 UTC
NO, It isn't resolved.
I install new LO:  4.0.1.2

create document with Hebrew comments and save it in both doc and docx:

results:

doc: letters appear in wrong order.
docx: words appear in wrong order.

attach test of now
Comment 16 Nadav 2013-03-20 15:23:11 UTC
Created attachment 76826 [details]
test of lo  4.0.1.2
Comment 17 Nadav 2013-03-20 15:25:48 UTC
good word to say on office: It open the odt file correctly.
Comment 18 Boaz Dodin 2013-03-24 06:12:44 UTC
(In reply to comment #15)
> NO, It isn't resolved.
> I install new LO:  4.0.1.2
> 
> create document with Hebrew comments and save it in both doc and docx:
> 
> results:
> 
> doc: letters appear in wrong order.
> docx: words appear in wrong order.
> 
> attach test of now

@Nadav - Windows version?
M. Office version?
Comment 19 Nadav 2013-03-24 18:09:53 UTC
(In reply to comment #18)
> (In reply to comment #15)
> > NO, It isn't resolved.
> > I install new LO:  4.0.1.2
> > 
> > create document with Hebrew comments and save it in both doc and docx:
> > 
> > results:
> > 
> > doc: letters appear in wrong order.
> > docx: words appear in wrong order.
> > 
> > attach test of now
> 
> @Nadav - Windows version?

7

> M. Office version?

2003
Comment 20 Boaz Dodin 2013-03-28 12:16:31 UTC
(In reply to comment #19)
> (In reply to comment #18)
> > (In reply to comment #15)
> > > NO, It isn't resolved.
> > > I install new LO:  4.0.1.2
> > > 
> > > create document with Hebrew comments and save it in both doc and docx:
> > > 
> > > results:
> > > 
> > > doc: letters appear in wrong order.
> > > docx: words appear in wrong order.
> > > 
> > > attach test of now
> > 
> > @Nadav - Windows version?
> 
> 7
> 
> > M. Office version?
> 
> 2003

Well, docx files should open properly only if the compatibility pack is installed ontop of M. Office 2003.
Comment 21 QA Administrators 2015-04-19 03:23:19 UTC Comment hidden (obsolete)
Comment 22 Eyal Rozenberg 2015-04-24 18:28:42 UTC
Tested using "testdoc" with LO 4.4.2.2 on Windows 7:

Characters:            Ok
Individual words:      Ok
Main text word order:  Ok
Comment word order:    Reversed
Comment 23 QA Administrators 2016-09-20 09:33:44 UTC Comment hidden (obsolete)
Comment 24 Eyal Rozenberg 2016-09-20 18:19:55 UTC
(In reply to Eyal Rozenberg from comment #22)

Still seeing the same thing with LO 5.2.1.2 as I saw before (word order in comment reversed). I can't set the version to 5.2.1.2, so setting it 5.2.1.2 rc.
Comment 25 Yotam Benshalom 2017-09-22 23:02:00 UTC
I rely heavily on comments, and this bug prevents me from using libreoffice to collaborate with my colleagues.
Comment 26 Lior Kaplan 2017-10-02 11:20:16 UTC
(In reply to Yotam Benshalom from comment #25)
> I rely heavily on comments, and this bug prevents me from using libreoffice
> to collaborate with my colleagues.

What's you current LibreOffice version/operating system?
Comment 27 Yotam Benshalom 2017-10-02 12:20:22 UTC
LibreOffice 5.4.2.2 on Ubuntu 17.10. This problem seems to be system-independent, as it occures on windows as well.
Comment 28 Yousuf Philips (jay) (retired) 2017-10-02 12:26:38 UTC
Created attachment 136686 [details]
sample odt with hebrew and arabic

So the square showing up is an issue of missing fallback fonts, but when the two issues are that the text appear in reverse in MS Word and they have the wrong font. Text that was in hebrew text set to 'Nachlieli CLM' is loading in Word as 'Segoe UI' and arabic text set to 'Times New Roman' is loading in Word as 'Nimbus Roman No9 L'.

Version: 6.0.0.0.alpha0+
Build ID: a2a3e06a29077d4274dc15eea28a01afe22e3658
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 29 Yousuf Philips (jay) (retired) 2017-10-02 12:31:28 UTC
Created attachment 136687 [details]
screenshot of how it appears in Word 2013
Comment 30 Yousuf Philips (jay) (retired) 2017-10-20 17:20:57 UTC
*** Bug 113280 has been marked as a duplicate of this bug. ***
Comment 31 Yousuf Philips (jay) (retired) 2017-10-20 17:27:07 UTC
Miklos: Can you assist with this?
Comment 32 Yousuf Philips (jay) (retired) 2017-10-20 17:31:30 UTC
Justin, Mike: you guys familiar with .doc binary format?
Comment 33 Miklos Vajna 2017-10-24 08:21:07 UTC
Sorry, I still have a relatively long list of regression to take care of, so right now I'm not interested in picking up new .doc bugs.
Comment 34 Commit Notification 2018-03-01 12:02:57 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=18b4c1d0b8e030e4fa081995eccf68f01049892e

tdf#45999 doc: make RTL text in comments show correctly in MSWord.

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 35 Lior Kaplan 2018-09-30 14:57:45 UTC
Verified on Office 2016 by Itiel Y on Hebrew Telegram group.