tdf#45999 doc: make RTL text in comments show correctly in MSWord.

Both sprmPFBiDi and sprmCFBiDi need to be written to doc to make
the word order correct. The patch output sprmCFBiDi when the
paragraph is a RTL paragraph.

Change-Id: I429d4e9cf60cf0c65831a24a7f3fa151a9dc3b9f
Reviewed-on: https://gerrit.libreoffice.org/50294
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mark Hung <marklh9@gmail.com>